# zipper-compression

./: CMakeLists.txt  README.md  requirements.txt
.devcontainer/: Dockerfile
cli/: CMakeLists.txt  main.cpp
include/: bit_buffer.hpp  code.hpp  decoder_if.hpp  logger.hpp
include/deflate/: code_lendist_table.hpp  decoder.hpp  huffman_dfa.hpp  huffman_tree.hpp
src/: CMakeLists.txt  logger.cpp
src/deflate/: decoder.cpp
tests/: CMakeLists.txt  deflate_decoder_tests.cpp  generate_deflate_data.py
